Shtimi i metodes se kerkimit, modifikimi i View se makinave

--- a/Projekt_Teknologji_dotNet/Projekt_Teknologji_dotNet.csproj
+++ b/Projekt_Teknologji_dotNet/Projekt_Teknologji_dotNet.csproj
@@ -274,6 +274,7 @@
     <Content Include="Views\Tipis\Details.cshtml" />
     <Content Include="Views\Tipis\Edit.cshtml" />
     <Content Include="Views\Tipis\Index.cshtml" />
+    <Content Include="Views\Home\Kerko.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
