--- a/Projekt_Teknologji_dotNet/Projekt_Teknologji_dotNet.csproj
+++ b/Projekt_Teknologji_dotNet/Projekt_Teknologji_dotNet.csproj
@@ -209,6 +209,10 @@
     <Compile Include="Migrations\202201211444460_modifyRezervation.Designer.cs">
       <DependentUpon>202201211444460_modifyRezervation.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202201262344195_PhoneNumber.cs" />
+    <Compile Include="Migrations\202201262344195_PhoneNumber.Designer.cs">
+      <DependentUpon>202201262344195_PhoneNumber.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Contact.cs" />
@@ -293,6 +297,7 @@
     <Content Include="Views\Rezervimet\Delete.cshtml" />
     <Content Include="Views\Rezervimet\Index.cshtml" />
     <Content Include="Views\Rezervimet\AllReservation.cshtml" />
+    <Content Include="Views\Home\Klientet.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -336,6 +341,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202201211444460_modifyRezervation.resx">
       <DependentUpon>202201211444460_modifyRezervation.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202201262344195_PhoneNumber.resx">
+      <DependentUpon>202201262344195_PhoneNumber.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
