--- a/Projekt_Teknologji_dotNet/Projekt_Teknologji_dotNet.csproj
+++ b/Projekt_Teknologji_dotNet/Projekt_Teknologji_dotNet.csproj
@@ -224,6 +224,7 @@
     <Compile Include="Models\Tipi.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
+    <Compile Include="Validime\KontrollDate.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap-theme.css" />
